--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Css folder styler links -->
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="css/hover.css">
 
   <title>Frontend Mentor | Order summary card</title>
