--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Css folder styler links -->
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/hover.css">
 
   <title>Frontend Mentor | Order summary card</title>
@@ -22,7 +22,9 @@
   <!-- Main section -->
   <main>
     <section class="card">
-      <div class="top-img"></div>
+      <div class="top-img">
+        <img src="/images/illustration-hero.svg" alt="">
+      </div>
       <div class="info">
         <div class="details">
           <h1>Order Summary</h1>
