--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             device anywhere you like!</p>
         </div>
         <div class="plan">
-          <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
+          <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="48" height="48">
             <g fill="none" fill-rule="evenodd">
               <circle cx="24" cy="24" r="24" fill="#DFE6FB" />
               <path fill="#717FA6" fill-rule="nonzero"
@@ -45,17 +45,19 @@
           </div>
           <span class="change"><a href="#">Change</a></span>
         </div>
-        <button class="btn">Proceed to Payment</button>
-        <span class="cancel">Cancel Order</span>
+        <button type="button" class="btn">Proceed to Payment</button>
+        <button type="button" class="cancel">Cancel Order</button>
       </div>
     </section>
   </main>
 
   <!-- Attribution section -->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Jean-FrontEnd">Jean Ruiz</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/Jean-FrontEnd">Jean Ruiz</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
